--- a/.editorconfig
+++ b/.editorconfig
@@ -24,6 +24,14 @@ trim_trailing_whitespace = false
 indent_style = space
 indent_size = 4
 
+[*.js]
+indent_style = space
+indent_size = 2
+
+[*.yaml]
+indent_style = space
+indent_size = 2
+
 # Tab indentation (no size specified)
 [Makefile]
 indent_style = tab
